commit after changing password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ server.port=8080
 
 # Spring Security default user credentials
 spring.security.user.name=admin
-spring.security.user.password=admin
+spring.security.user.password=spring
